@@ -70,17 +70,23 @@ WIDGET_DEFAULT = {
         "show_percentage_sign": True,
         "font_color_brake_bias": "#FFFFFF",
         "bkg_color_brake_bias": "#222222",
+        "show_baseline_bias_delta": True,
+        "font_color_baseline_bias_delta": "#FFFFFF",
+        "bkg_color_baseline_bias_delta": "#222222",
         "show_brake_migration": True,
         "font_color_brake_migration": "#FFFFFF",
         "bkg_color_brake_migration": "#222222",
         "electric_braking_allocation": -1,
+        "decimal_places_baseline_bias_delta": 2,
         "decimal_places_brake_bias": 2,
         "decimal_places_brake_migration": 1,
         "prefix_brake_bias": "BB ",
+        "prefix_baseline_bias_delta": "",
         "prefix_brake_migration": "BM ",
         "suffix_brake_migration": "F",
         "column_index_brake_bias": 1,
-        "column_index_brake_migration": 2,
+        "column_index_baseline_bias_delta": 2,
+        "column_index_brake_migration": 3,
     },
     "brake_performance": {
         "enable": True,
